Fixing overflow-x to hidden

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,7 @@ body {
     color: white;
     font-size: 80%;
     font-family: Oregon;
+    overflow-x: hidden;
 }
 
 .vcenter {
